@@ -5,7 +5,6 @@
 # choices:
 #    serializer_catalog (fast, uses .d directories in /var/lib/cobbler/config)
 #    serializer_yaml (original serializer, uses a few text files)
-#    serializer_shelve (fast but experimental, bsddb based)
 #
 # for 99% or more of all installations, use serializer_catalog.
 #
